// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.api.service.runnerservice;
option go_package = "github.com/kapetaniosci/pipe/pkg/app/api/service/runnerservice";

import "validate/validate.proto";
import "pkg/app/api/service/runnerservice/event.proto";
import "pkg/model/command.proto";
import "pkg/model/common.proto";
import "pkg/model/runner_stats.proto";

service RunnerAPI {
    // Ping is periodically sent by runner to report its status/stats to API.
    // The received stats will be written to the cache immediately.
    // The cache data may be lost anytime so we need a singleton Persister
    // to persist those data into datastore every n minutes.
    rpc Ping(PingRequest) returns (PingResponse) {}

    // ListApplications returns a list of registered applications
    // that should be managed by the requested runner.
    // Disabled applications should not be included in the response.
    // Runner uses this RPC to fetch and sync the application configuration into its local database.
    rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse) {}

    // CreateDeployment creates/triggers a new deployment for an application
    // that is managed by this runner.
    // This will be used by DeploymentTrigger component.
    rpc CreateDeployment(CreateDeploymentRequest) returns (CreateDeploymentResponse) {}

    // ListNotCompletedDeployments returns a list of not completed deployments
    // which are managed by this runner.
    // DeploymentController component uses this RPC to spawns/syncs its local deployment executors.
    rpc ListNotCompletedDeployments(ListNotCompletedDeploymentsRequest) returns (ListNotCompletedDeploymentsResponse) {}

    // RegisterEvents is sent by runner to submit one or multiple events
    // about executing pipelines and application state.
    // Control plane uses the received events to update the state of pipeline/application-resource-tree.
    // We want to start by a simple solution at this initial stage of development,
    // so the API server just handles as below:
    // - loads the releated pipeline/application-resource-tree from datastore
    // - checks and builds new state for the pipeline/application-resource-tree
    // - updates new state into datastore and cache (cache data is for reading while handling web requests)
    // In the future, we may want to redesign the behavior of this RPC by using pubsub/queue pattern.
    // After receiving the events, all of them will be publish into a queue immediately,
    // and then another Handler service will pick them inorder to apply to build new state.
    // By that way we can control the traffic to the datastore in a better way.
    rpc RegisterEvents(RegisterEventsRequest) returns (RegisterEventsResponse) {}

    // SendStageLog is sent by runner to save the log of a pipeline stage.
    rpc SendStageLog(SendStageLogRequest) returns (SendStageLogResponse) {}

    // GetCommands is periodically called by runner to obtain the commands
    // that should be handled.
    // Whenever an user makes an interaction from WebUI (cancel/approve/retry/sync)
    // a new command with a unique identifier will be generated an saved into the datastore.
    // Runner uses this RPC to list all still-not-handled commands to handle them,
    // then report back the result to server.
    // On other side, the web will periodically check the command status and feedback the result to user.
    // In the future, we may need a solution to remove all old-handled commands from datastore for space.
    rpc GetCommands(GetCommandsRequest) returns (GetCommandsResponse) {}

    // ReportCommandHandled is called by runner to mark a specific command as handled.
    // The request payload will contain the handle status as well as any additional result data.
    // The handle result should be updated to both datastore and cache (for reading from web).
    rpc ReportCommandHandled(ReportCommandHandledRequest) returns (ReportCommandHandledResponse) {}

    // ReportPipelineCompleted used by runner to send the final state
    // of the pipeline that has just been completed.
    rpc ReportPipelineCompleted(ReportPipelineCompletedRequest) returns (ReportPipelineCompletedResponse) {}

    // ReportApplicationState is periodically sent by runner to refresh the current state of application.
    // This may contain a full tree of application resources for Kubernetes application.
    // The tree data will be written into filestore and the cache inmmediately.
    rpc ReportApplicationState(ReportApplicationStateRequest) returns (ReportApplicationStateResponse) {}
}

message PingRequest {
    pipe.model.RunnerStats runner_stats = 1 [(validate.rules).message.required = true];
}

message PingResponse {
    int64 ping_interval = 1;
}

message ListApplicationsRequest {
}

message ListApplicationsResponse {
    repeated pipe.model.Application applications = 1;
}

message CreateDeploymentRequest {
    string application_id = 1 [(validate.rules).string.min_len = 1];
    pipe.model.Commit commit = 2 [(validate.rules).message.required = true];
    string author = 3 [(validate.rules).string.min_len = 1];
}

message CreateDeploymentResponse {
}

message ListNotCompletedDeploymentsRequest {
}

message ListNotCompletedDeploymentsResponse {
}

message RegisterEventsRequest {
    repeated Event events = 1;
}

message RegisterEventsResponse {
    repeated string failed_ids = 1;
}

message SendStageLogRequest {
    string pipeline_id = 1 [(validate.rules).string.min_len = 1];
    string stage_id = 2 [(validate.rules).string.min_len = 1];
    bytes log = 3;
    bool complete = 4;
}

message SendStageLogResponse {
}

message GetCommandsRequest {
}

message GetCommandsResponse {
    repeated pipe.model.Command commands = 1;
}

message ReportCommandHandledRequest {
    string command_id = 1 [(validate.rules).string.min_len = 1];
    pipe.model.CommandState.Status status = 2 [(validate.rules).enum.defined_only = true];
    map<string,string> result = 3;
}

message ReportCommandHandledResponse {
}

message ReportPipelineStartedRequest {
    string pipeline_id = 1 [(validate.rules).string.min_len = 1];
    string application_id = 2 [(validate.rules).string.min_len = 1];
    pipe.model.Commit commit = 3 [(validate.rules).message.required = true];
}

message ReportPipelineStartedResponse {
}

message ReportPipelineCompletedRequest {
    string pipeline_id = 1 [(validate.rules).string.min_len = 1];
}

message ReportPipelineCompletedResponse {
}

message ReportApplicationStateRequest {
    string application_id = 1 [(validate.rules).string.min_len = 1];
    int64 timestamp = 2 [(validate.rules).int64.gt = 0];
}

message ReportApplicationStateResponse {
    int64 latest_timestamp = 1 [(validate.rules).int64.gt = 0];
}
